--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "clsx": "^2.1.1",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "recharts": "^3.7.0",
     "tailwindcss": "^4.1.12"
   },
   "devDependencies": {
