--- a/package.json
+++ b/package.json
@@ -23,8 +23,11 @@
     "@tabler/icons-react": "^3.35.0",
     "@tanstack/react-router": "^1.157.8",
     "clsx": "^2.1.1",
+    "i18next": "^25.8.0",
+    "i18next-browser-languagedetector": "^8.2.0",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "react-i18next": "^16.5.4",
     "recharts": "^3.7.0",
     "tailwindcss": "^4.1.12"
   },
