--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "@evolu/web": "^2.4.0",
     "@tabler/icons-react": "^3.35.0",
     "@tanstack/react-router": "^1.157.8",
+    "@upstash/redis": "^1.36.2",
+    "@vercel/node": "^5.5.33",
     "clsx": "^2.1.1",
     "i18next": "^25.8.0",
     "i18next-browser-languagedetector": "^8.2.0",
@@ -29,7 +31,8 @@
     "react-dom": "19.1.0",
     "react-i18next": "^16.5.4",
     "recharts": "^3.7.0",
-    "tailwindcss": "^4.1.12"
+    "tailwindcss": "^4.1.12",
+    "web-push": "^3.6.7"
   },
   "devDependencies": {
     "@eslint/js": "^9.36.0",
@@ -42,6 +45,7 @@
     "@testing-library/user-event": "^14.6.1",
     "@types/react": "~19.1.13",
     "@types/react-dom": "~19.1.9",
+    "@types/web-push": "^3.6.4",
     "@typescript-eslint/eslint-plugin": "^8.44.1",
     "@typescript-eslint/parser": "^8.44.1",
     "@vite-pwa/assets-generator": "^1.0.0",
@@ -60,6 +64,7 @@
     "vite": "^7.1.3",
     "vite-plugin-pwa": "^1.0.2",
     "vitest": "^4.0.18",
+    "workbox-build": "^7.4.0",
     "workbox-core": "^7.3.0",
     "workbox-window": "^7.3.0"
   }
